app/styles/prototype/_search.scss
.auk-card-table {
  tbody tr td {
    border: 0 !important;
  }

  tbody tr td {
    padding: 0 !important;
    padding-bottom: $au-unit-small !important;
  }

  tbody tr:hover {
    background-color: var(--au-gray-100);
  }

  .container-flex--scroll {
    overflow: visible !important;
  }
}

.au-c-button--naked-compact {
  height: auto;
  padding: 0;
  border: 0;
  line-height: 1.25;
  width: 100%;

  &.is-active {
    color: var(--au-gray-900);
    background-color: var(--au-gray-100) !important;
  }
}

.au-c-list-item__divider {
  border-bottom: .1rem dotted var(--au-gray-300);
}

.au-c-search-container {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 50px);
}

.au-c-search-container--publications {
  height: calc(100vh - 100px);
}

.au-c-search-container__header {

}

.au-c-search-container__content {
  position: relative;
  height: 100%;
  overflow: hidden;

  .au-c-main-container {
    height: 100%;
  }
}

.au-c-search-overflow {
  height: 100%;
  overflow: visible;
}

.au-u-para-small,
.vlc-document-card-content__meta,
.au-c-sidebar__content {
  .au-c-link {
    font-size: inherit;
    vertical-align: initial;
  }
}

